@@ -4,6 +4,10 @@
 =======================================================
 
 
+17 Apr 2014     bugs fixed in the CRYSTAL to WanT interface. test16 and test13 updated.
+		polyacetylene case added to test13. All tests runned and checked.
+		References updated in tests 13,15,16 . (AF)
+
 01 Apr 2014     bug fixed in the calculation of projdos when using non-orthogonal
 		orbitals. (AF)
 
